# TrackSplit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  style.css  tracksplit.toml.example
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  release.yml  tests.yml
assets/: library.json
docs/: 404.html  configuration.md  faq.md  getting-started.md  index.html  index.md  output.md  sitemap.xml  troubleshooting.md  usage.md
docs/configuration/: index.html
docs/faq/: index.html
docs/getting-started/: index.html
docs/output/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-05-08-structured-logging.md
docs/superpowers/specs/: 2026-05-08-b2b-primary-artist-folder-design.md  2026-05-08-structured-logging-design.md
docs/superpowers/specs/2026-05-08-b2b-primary-artist-folder-design/: index.html
docs/superpowers/specs/2026-05-08-structured-logging-design/: index.html
docs/troubleshooting/: index.html
docs/usage/: index.html
scripts/: check-versions.sh  release-prep.sh  release.sh  setup-hooks.sh
scripts/git-hooks/: pre-push
site/: index.html  style.css
site/assets/: browser.js
src/tracksplit/: __init__.py  cli.py  console.py  cover.py  cratedigger.py  extract.py  log.py  manifest.py  metadata.py  models.py  opus_patch.py  paths.py  pipeline.py  probe.py  reconcile.py  split.py  subprocess_utils.py  tagger.py  tools.py  update_check.py
src/tracksplit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tracksplit/fonts/: __init__.py
tests/: _manifest_helpers.py  test_cli.py  test_console.py  test_cover.py  test_cratedigger.py  test_extract.py  test_integration.py  test_log.py  test_logging_setup.py  test_manifest.py  test_metadata.py  test_models.py  test_opus_patch.py  test_paths.py  test_pipeline.py  test_probe.py  test_reconcile.py  test_split.py  test_subprocess_utils.py  test_tagger.py  test_tagger_fixtures.py  test_tools.py  test_update_check.py
tests/integration/: test_tracksplit_end_to_end.py
