[project]
name = "tracksplit"
version = "0.14.1"
description = "Turn chaptered videos into gapless, tagged albums"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Rouzax" }]
keywords = [
    "flac",
    "audio",
    "video",
    "chapters",
    "album",
    "music",
    "extraction",
    "mkv",
    "ffmpeg",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "typer>=0.9",
    "mutagen>=1.47",
    "rich>=13.0",
    "numpy>=1.24",
    "ftfy>=6.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://rouzax.github.io/TrackSplit/"
Documentation = "https://rouzax.github.io/TrackSplit/docs/"
Repository = "https://github.com/Rouzax/TrackSplit"
Issues = "https://github.com/Rouzax/TrackSplit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tracksplit = ["fonts/*.ttf"]

[project.scripts]
tracksplit = "tracksplit.cli:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: opt-in tests that run the real pipeline against local MKVs",
]
