[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tracksplit"
version = "0.14.2"
description = "Turn chaptered videos into gapless, tagged albums"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Rouzax" }]
keywords = [
    "flac",
    "audio",
    "video",
    "chapters",
    "album",
    "music",
    "extraction",
    "mkv",
    "ffmpeg",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "typer>=0.9",
    "mutagen>=1.47",
    "rich>=13.0",
    "numpy>=1.24",
    "ftfy>=6.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://rouzax.github.io/TrackSplit/"
Documentation = "https://rouzax.github.io/TrackSplit/docs/"
Repository = "https://github.com/Rouzax/TrackSplit"
Issues = "https://github.com/Rouzax/TrackSplit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff==0.15.5",
    "mypy==2.1.0",
    "check-manifest==0.51",
    "pre-commit==4.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tracksplit = ["fonts/*.ttf"]

[project.scripts]
tracksplit = "tracksplit.cli:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: opt-in tests that run the real pipeline against local MKVs",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes. I: isort. B: bugbear. C4: comprehensions.
# SIM: simplify. UP: pyupgrade. A: builtin shadowing. RUF: ruff-native.
# This set replaces the flake8 + isort + black plugin stack with one tool.
select = ["E", "F", "I", "B", "C4", "SIM", "UP", "A", "RUF"]
# E501 (line length) is owned by the formatter, which wraps what it can and
# leaves long strings/URLs alone; enforcing it again here just adds noise.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# typer's `param: T = typer.Option(...)` defaults trip B008 by design.
"src/tracksplit/cli.py" = ["B008"]
# Tests may shadow builtins (A) and idiomatically nest `with pytest.raises(...)`
# inside `caplog`/`patch` context managers (SIM117), which reads clearer than a
# single combined statement.
"tests/**" = ["A", "SIM117"]
# Integration fixtures embed real MKV filenames that contain fullwidth
# punctuation (e.g. U+FF5C "｜" from YouTube titles); it must match disk verbatim.
"tests/integration/**" = ["A", "SIM117", "RUF001"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
# Resolve the src/ layout without requiring an (editable) install, so `mypy`
# behaves identically locally and in CI.
mypy_path = "src"
explicit_package_bases = true
# Gradual mode: type-check what is annotated, do not force annotations yet.
# Third-party packages without stubs (mutagen, ftfy, ...) are not flagged.
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.check-manifest]
# The sdist ships the importable package (src/tracksplit, including the bundled
# fonts) plus README and LICENSE. Everything below is dev tooling, docs sources,
# the generated docs site, tests, or examples, intentionally not in the sdist.
# check-manifest still guards that new package data under src/ gets shipped.
ignore = [
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "TODO.md",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "mkdocs.yml",
    "*.example",
    ".github/**",
    "docs/**",
    "site/**",
    "scripts/**",
    "tests/**",
]
