[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tracksplit"
version = "0.16.0"
description = "Turn chaptered videos into gapless, tagged albums"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Rouzax" }]
keywords = [
    "flac",
    "audio",
    "video",
    "chapters",
    "album",
    "music",
    "extraction",
    "mkv",
    "ffmpeg",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "typer>=0.9",
    "mutagen>=1.47",
    "rich>=13.0",
    "numpy>=1.24",
    "ftfy>=6.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://rouzax.github.io/TrackSplit/"
Documentation = "https://rouzax.github.io/TrackSplit/docs/"
Repository = "https://github.com/Rouzax/TrackSplit"
Issues = "https://github.com/Rouzax/TrackSplit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff==0.15.18",
    "mypy==2.1.0",
    "basedpyright==1.39.8",
    "vulture==2.16",
    "pytest-cov==7.1.0",
    "check-manifest==0.51",
    "pre-commit==4.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tracksplit = ["fonts/*.ttf"]

[project.scripts]
tracksplit = "tracksplit.cli:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: opt-in tests that run the real pipeline against local MKVs",
]
# Coverage is measured on the unit suite (integration tests are opt-in and
# excluded in CI). --cov-fail-under is a ratchet: it is set to the current
# floor and only ever raised, so it guards against regressions without
# forcing a big-bang test-writing effort. Raise it as new tests land.
addopts = "--cov=tracksplit --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["tracksplit"]
# The opt-in integration module is not part of the measured unit suite.
omit = ["*/tests/*"]

[tool.coverage.report]
# Don't count purely defensive/uninteresting lines against the floor.
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __repr__",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes. I: isort. B: bugbear. C4: comprehensions.
# SIM: simplify. UP: pyupgrade. A: builtin shadowing. RUF: ruff-native.
# This set replaces the flake8 + isort + black plugin stack with one tool.
select = ["E", "F", "I", "B", "C4", "SIM", "UP", "A", "RUF"]
# E501 (line length) is owned by the formatter, which wraps what it can and
# leaves long strings/URLs alone; enforcing it again here just adds noise.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# typer's `param: T = typer.Option(...)` defaults trip B008 by design.
"src/tracksplit/cli.py" = ["B008"]
# Tests may shadow builtins (A) and idiomatically nest `with pytest.raises(...)`
# inside `caplog`/`patch` context managers (SIM117), which reads clearer than a
# single combined statement.
"tests/**" = ["A", "SIM117"]
# Integration fixtures embed real MKV filenames that contain fullwidth
# punctuation (e.g. U+FF5C "｜" from YouTube titles); it must match disk verbatim.
"tests/integration/**" = ["A", "SIM117", "RUF001"]

[tool.mypy]
# Target 3.12 for the type checker (the runtime floor is still 3.11, enforced
# by the 3.11 test-matrix job). numpy's bundled stubs use PEP 695 `type`
# statements, which mypy refuses to parse under a <3.12 target; following them
# cannot be skipped, so we type-check against 3.12. Our own code uses no
# 3.12-only syntax (ruff's UP rules are disabled and pinned to the 3.11 floor).
python_version = "3.12"
files = ["src"]
# Resolve the src/ layout without requiring an (editable) install, so `mypy`
# behaves identically locally and in CI.
mypy_path = "src"
explicit_package_bases = true
# Gradual mode: type-check what is annotated, do not force annotations yet.
# Third-party packages without stubs (mutagen, ftfy, ...) are not flagged.
ignore_missing_imports = true
warn_redundant_casts = true
# warn_unused_ignores is intentionally NOT enabled: CI installs unpinned latest
# third-party deps, and their typing stubs (Pillow, numpy, ...) shift which
# `# type: ignore` comments are needed between versions. With it on, a routine
# upstream stub update flips a previously-required ignore to "unused" and breaks
# the lint gate for reasons unrelated to our code.
warn_unreachable = true

[tool.pyright]
# Pyright (run via basedpyright) is a second type-check gate alongside mypy.
# The two are complementary: mypy is the drift-resistant baseline (it treats
# stub-less deps as Any), while pyright reads library source
# (useLibraryCodeForTypes, on by default) and so catches precision issues mypy
# cannot, e.g. mutagen tag-object types.
#
# typeCheckingMode is pinned to "standard" rather than basedpyright's stricter
# default: "standard" matches plain pyright and is already clean on src/.
# Strict mode is overwhelmingly third-party "Unknown" noise on this codebase
# (untyped audio libs), so we grow strictness per-file via `# pyright: strict`
# on touched files instead of flipping it on globally.
#
# pythonVersion matches [tool.mypy] (3.12) for the same numpy-stub reason.
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.vulture]
# Dead-code detection. min_confidence is set to 80 so the gate is clean and
# low-noise: it catches high-confidence dead code (unused variables, imports,
# unreachable branches). Unused *functions/methods* are reported at 60%
# confidence and are intentionally not gated yet; lowering the threshold to
# sweep those is a deliberate follow-up that needs a whitelist for the known
# false positives (the _ExistingTags Protocol, mutagen Picture attribute sets,
# the `main` console entry point, the test-only _clear_* cache helpers).
paths = ["src/tracksplit"]
min_confidence = 80
# `package_name` is an intentionally-unused keyword-only parameter on
# update_check.format_freshness_line, kept for signature symmetry with the
# CrateDigger twin module (documented at the call site). Not dead code.
ignore_names = ["package_name"]

[tool.check-manifest]
# The sdist ships the importable package (src/tracksplit, including the bundled
# fonts) plus README and LICENSE. Everything below is dev tooling, docs sources,
# the generated docs site, tests, or examples, intentionally not in the sdist.
# check-manifest still guards that new package data under src/ gets shipped.
ignore = [
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "TODO.md",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "mkdocs.yml",
    "*.example",
    ".github/**",
    "docs/**",
    "site/**",
    "scripts/**",
    "tests/**",
]
